k8/ingress/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/auth-url: http://kubernetes.docker.internal/useraccount # 200 ok from this page should imply that user is authenticated
    # nginx.ingress.kubernetes.io/auth-response-headers: userId # todo response headers need to be set by user api
    # nginx.ingress.kubernetes.io/auth-signin: http://kubernetes.docker.internal/useraccount/login # page to redirect if 200 OK not received
spec: 
  rules:
   - host: kubernetes.docker.internal
     http:
        paths:
        - path: /auctionroom
          pathType: Prefix
          backend:
              service:
                name: auctionroommanager
                port:
                  number: 9000
        - path: /auctiondetails
          pathType: Prefix
          backend:
              service:
                name: auctiondetails
                port:
                  number: 8081
        # just for testing if this ingress is running:
        - path: /test-auth
          pathType: Prefix
          backend:
              service:
                name: frontend
                port:
                  number: 3000
