k8/ingress/chat-https-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-https-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/websocket-services: "auctionroommanager"
    # enable cors
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    # sticky session to enable chatroom scaling
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/affinity-mode: "balanced"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    # enable https
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec: 
  rules:
   - host: kubernetes.docker.internal
   - http:
        paths:
        # - path: /auctionroom
        #   pathType: Prefix
        #   backend:
        #       service:
        #         name: auctionroommanager
        #         port:
        #           number: 9000
        - path: /socket.io
          pathType: Prefix
          backend:
              service:
                name: auctionroommanager
                port:
                  number: 9000
